Day 2 sample working